--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <button class="upload-btn" onclick="uploadFiles()">Kirim via WhatsApp 🚀</button>
     </div>
 
-    <script src="style.js">
+    <script src="styles.js">
     </script>
 </body>
 </html>
